--- a/index.qmd
+++ b/index.qmd
@@ -1,55 +1,95 @@
 ---
-title: "landing-page"
-format: html
-
----
-
----
-title: "BDS Toolbox 2025"
+title: "BDS Toolbox: Data Visualization"
 format:
   html:
-    toc: false
+    toc: true
 ---
 
-# Welcome to BDS Toolbox 2025
+## Welcome to BDS Toolbox: Data Visualization!
 
-This site hosts all course materials for **BDS Toolbox 2025**, a master’s-level introduction to data visualization and essential data science tools.  
+Use the navigation bar above or the links below to find everything you need for this module.
 
-Use the navigation bar above or the links below to find what you need.
+------------------------------------------------------------------------
 
----
+## 📋 Overview
 
-## 📋 Course Overview
-- **Instructor:** Anne Johansson  
-- **Semester:** Spring 2025  
-- **Format:** Lectures + hands-on labs  
-- **Main Topics:**  
-  - Effective data visualization  
-  - Reproducible workflows  
-  - Git & GitHub for collaboration  
-  - Quarto for professional documents and slides
+-   **Instructors:** Abe Hofman, Lilian Ye, Annie Johansson\
+-   **Dates:** September 30th - October 12th, 2025\
+-   **Format:** Lectures + Tutorials
+-   **Main Topics:**
+    -   Effective data visualization\
+    -   ggplot
+    -   Git & GitHub for collaboration
 
----
+In this module, you will learn a wide set of data visualisation tools for both static and interactive visualizations. We will also focus on why you should look at your data and what makes a good visualization. You will have access to rich data from the Prowise Servers, to design visualizations from.
 
-## 🗓️ Quick Links
+## 🗓️ Schedule
 
-### 📝 Syllabus
-[View the syllabus](syllabus.html)
+::: {.table .table-striped}
+<table>
+<tr>
+<th>When</th>
+<th>Where</th>
+<th>Topic</th>
+<th>Prepare</th>
+<th>During Tutorial</th>
+</tr>
+<tr>
+<td>Tuesday 30/9 15.00-18.00</td>
+<td>GS.11</td>
+<td>Good and Bad Plots / ggplot Basics</td>
+<td>Read: DV book ch. 1, 3<br>Watch video: Fundamentals of Data Visualization</td>
+<td>Kick-off quiz<br>Work on Assignment 1</td>
+</tr>
+<tr>
+<td>Friday 3/10 12.30-15.30</td>
+<td>JKB.25</td>
+<td>Interactive Plots</td>
+<td> </td>
+<td>Kick-off quiz<br>Work on Assignment 1</td>
+</tr>
+<tr>
+<td colspan="5"><strong>Deadline DV Assignment 1 – Sunday 5/9 23.59</strong></td>
+</tr>
+<tr>
+<td>Tuesday 7/10 15.00-18.00</td>
+<td>GS.11</td>
+<td>Better Plots</td>
+<td>Read: DV Book ch. 3.7, 4.3, 5.3, 5.5, 5.6, 6.0, 6.1, 6.2, 8.1, 8.2, 8.3<br>Watch videos: Themes, Recycling themes, Trend lines / stats, Color scheme, Multiple plots, Facets, Saving plots</td>
+<td> </td>
+</tr>
+<tr>
+<td>Friday 10/10 12.30-15.30</td>
+<td>JKB.25</td>
+<td>Q&A Session</td>
+<td>**Data Visualizations - First Draft Due**</td>
+<td>Work on Assignment 2<br>Peer Review</td>
+</tr>
+<tr>
+<td colspan="5"><strong>Deadline DV Assignment 2 – Sunday 12/9 23.59</strong></td>
+</tr>
+</table>
 
-### 🎞️ Lecture Slides
-- [Lecture 1: Introduction](slides/slides.html)  
+:::
 
-### 📂 Repository on GitHub
-[Browse the repository](https://github.com/ann1ejohansson/bds-toolbox-2025)
+## 🔗 Quick links
 
----
+[Lecture Slides](slides/slides.html){target="_blank"}
+
+[Browse the GitHub repository](https://github.com/ann1ejohansson/bds-toolbox-2025){target="_blank"}
+
+## 📝 Assignments
+
+[Assignment 1](assignments/assignment-1.html){target="_blank"}
+
+[Assignment 2](assignments/assignment-2.html){target="_blank"}
+
+Submit **both** assignments to canvas. Assignment 2 should also be submitted to this site, via a GitHub pull request. Instructions for this can be found [on the GitHub landing page](https://github.com/ann1ejohansson/bds-toolbox-2025). ---
 
 ## 💡 How to Use This Site
-1. **Browse the slides** before and after class.  
-2. **Clone or fork the repo** to practice Git workflows.  
-3. **Open `.qmd` files** locally and re-render them with Quarto to experiment.  
-4. Submit exercises or labs via GitHub pull requests, following the instructions in the syllabus.
 
----
+1.  **Browse the slides** before and after class.\
+2.  **Access the assignments.**\
+3.  **Practice workflows with Git.** If you are interested in how to setup a GitHub repository and work with Quarto documents, you can clone the repository and explore the files on your own computer.
 
-> **Tip:** If a slide link doesn’t work, make sure you’ve run `quarto render` and pushed the generated `docs/` folder to GitHub.
+------------------------------------------------------------------------
