--- a/assignments/working-on-the-server.qmd
+++ b/assignments/working-on-the-server.qmd
@@ -1,72 +1,35 @@
 ---
-title: "Data Visualization Assignment 1"
-format: 
-  html:
-    code-copy: true
-editor: visual
+title: "Working on the Oefenweb Server"
+format: html
 ---
 
-```{r actual-setup, include = FALSE}
-knitr::opts_chunk$set(eval = FALSE) 
-rm(list = ls()) 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(eval = FALSE, echo = TRUE, message = FALSE, warning = FALSE)
 ```
 
-## Instructions
 
-This is the first assignment for the Data Visualization module. The aim here is to get acquainted with the Prowise Learn data, practice with some ggplot basics, and to get you started with working with your visualizations for the final assignment.
+In this tutorial, we will learn how to work on the Oefenweb server. The server contains real data from Prowise Learn, which you can use to create visualizations.
+You will need to connect properly to the server in order to access the data and complete the assignments in the Data Visualization modules. 
 
-With this assignment, you can gain X points, plus X bonus points. Please [refer here](how-do-we-grade.qmd) for an overview of how we grade your data visualizations. Part A is completed, and thus also graded, individually. Part B should be completed with your assigned group. Please make sure to clearly indicate your group number and names of all group members in your submission. One person should submit the assignment on behalf of the group. If more than one person submits the group assignment, we will only look at one of them.
+### Step 1: Connect to the server
+You will have signed the GDPR form, and received log-in credentials for the server in an earlier module of this course. 
+Use the same credentials to log in to the data visualization server:  [https://data-visualization.oefenweb.nl/rstudio/auth-sign-in](https://data-visualization.oefenweb.nl/rstudio/auth-sign-in). 
 
-The assignment is due on **Sunday October 5th, 2025 at 23:59**. Submit your assignment to Canvas, under "DV Assignment 1".
+#### Setup your environment
+When working with RMarkdown, start with a setup chunk. This allows you to change settings for all code chunks in your document. Any chunk settings you set here can be overridden in individual chunks later on. 
+It is also good practice to clear your environment at the start of your script, to avoid any conflicts with existing objects in memory.
 
-Your submission for Part 1 should contain the following files:
+```{r setup environment, include = TRUE, eval=FALSE}
 
--   R code (style checked & working) in a .Rmd or .R file.\
--   Your (improved) version of the plot, compiled to .html or .pdf.\
--   Your interactive plot, compiled to .html or .pdf.
-
-with file names in the following structure: `DV-Assignment1-Firstname-Lastname-PartA.Rmd` (or `.R`), `DV-Assignment1-Firstname-Lastname-PartA.pdf` (or `.html`).
-
-Your group submission (Part 2) should contain the following files:
-
--   R code (style checked & working) in a .Rmd or .R file.
--   Your plot and short description, compiled to .html or .pdf.
-
-with file names in the following structure: `DV-Assignment1-GroupX-PartB.Rmd` (or `.R`), `DV-Assignment1-GroupX-PartB.pdf` (or `.html`).
-
-### ⚠️ Please read this before submitting
-
-We want to be able to understand and run your code. This will help us to give you a fair grade. Therefore we ask that - before you submit your code - you:
-
--   Run the Code Style check (i.e. the lintr) with the following code & resolve any issues. If you don't know what an error means, internet is your best friend! Also, study the lecture slides of the code styling session. Remember that you can win a full point by making sure your code styling is correct.
-
-```{r eval=FALSE}
-oefenwebTools::lintrProfile(rstudioapi::getSourceEditorContext()$path)  
-```
-
--   Clear your environment (`rm(list = ls())`) and re-run your code. We won't have anything stored in memory that is not created/retrieved in the script, therefore clearing your environment is a great way to detect any bugs that might accidentally be present.
-
--   Don't install packages in your code. If we need to install a package that you used, state which packages need to be installed at the beginning of your code.
-
-
-## Working with the Oefenweb Server
-Before starting the assignment, please look at the handout on [How to connect to the Oefenweb Server](working-on-the-server.qmd). This will help you to get started with retrieving data from the server. It also contains a useful tutorial on how to use SQL to retrieve data. Go through this code and make sure you understand it, as you will need it for this assignment.
-
-## Part 1: Oefenweb Data & Basic ggplot
-
-We are now going to work with real life Oefenweb data to recreate a plot. We'll first talk you through how to get the necessary data, and then it is up to you to work some ggplot magic!
-
-Let's get started by ensuring that you have all the packages installed that you will need later on.
-
-```{r setup, include = TRUE, eval=FALSE}
-#### SET_UP ####
 knitr::opts_chunk$set(echo = TRUE) # set default echo = TRUE for all code blocks
 
 rm(list = ls()) # Remove any existing objects in memory
 ```
 
-```{r setup-1, include = TRUE, eval=FALSE}
-#### REQUIREMENTS ####
+#### Install necessary packages
+Let's get started by ensuring that you have all the packages installed that you will need later on.
+
+```{r requirements}
 # Install Packages
 # Find everything that the user currently has installed
 all_installed_packages <- installed.packages()[, "Package"]
@@ -86,10 +49,17 @@ library(oefenwebTools)
 library(jsonlite)
 ```
 
+#### Make a connection to the server
 We now have everything we need to let our online R Studio environment know how to "communicate" with our Data Server. We can connect with the database by using the following code. This creates a connection to the database that is stored in the variable `con`.
 
-```{r eval=FALSE}
+```{r connection}
 con <- oefenwebDatabase::connect()
+# Always run this code in the console; do not leave this line in your script!
+```
+
+### Step 2: Retrieve data from the server
+#### Retrieve data with an SQL query
+```{r retrieve data}
 data <- DBI::dbGetQuery(con,
                         "SELECT id, login_count, new_school_id, grade
                          FROM users
@@ -103,7 +73,7 @@ From this point on, you can use the database connection to retrieve data from th
 
 We can, for example, use the following SQL statement to retrieve the `domains` table:
 
-```{r, eval=FALSE}
+```{r domains data}
 # select all columns (*) from the domains table.
 my_data_domains <-
   DBI::dbGetQuery(con, # the connection element to our database
@@ -112,13 +82,11 @@ my_data_domains <-
 
 You will receive warnings that let you know how data has been parsed. You can ignore these, or even better suppress them ;)
 
-```{r}
+```{r suppress warnings}
 my_data_domains <-
   suppressWarnings(DBI::dbGetQuery(con,
                                    "SELECT * FROM `domains`"))
 ```
-
-### A. Replicate this plot
 
 Now lets get some item data. In the `items` table we can find data that contains item information as for example the item question or answer options. We will choose the domain `tafels` (Multiplication Tables). In the `items` table we can see that there is no mention of "tafels" anywhere, however, each item does have a `domain_id` listed. If we look in the `domains` table we just retrieved, we see that `tafels` has the `id` '59'. We can use this information to retrieve only the items from the `tafels` game:
 
@@ -130,9 +98,13 @@ items <-
                                     WHERE `domain_id` = '59'"))
 ```
 
+**For a review of SQL queries, see the [SQL Handout](https://surfdrive.surf.nl/files/index.php/s/S9q2WQ5aY4d1UVP) from the previous module.**
+
+### Step 3: Manipulate the data
+
 Now we manipulate the data and create some new variables that we will need later on. First we convert the continuous variable `maximum_response_in_seconds` (the total amount of time allowed per item) and turn it into a categorical factor:
 
-```{r}
+```{r manipulate-1}
 items$maximum_response_in_seconds <- factor(items$maximum_response_in_seconds,
                                             levels = c(5, 10, 15, 20),
                                             labels = c("5 seconds",
@@ -143,7 +115,7 @@ items$maximum_response_in_seconds <- factor(items$maximum_response_in_seconds,
 
 Then, we want to know what the actual answer was to a question. Unfortunately, we store `question` and `answer`/`answer_options` data in the format of a JSON string. We thus need to clean the JSON before we can retrieve the answers:
 
-```{r}
+```{r manipulate-2}
 # Create a new variable where we will store the result
 items$answer <- numeric(nrow(items))
 
@@ -156,7 +128,7 @@ for (i in seq_len(nrow(items))) {
 
 We now have a column `answer` that has the cleaned, numeric, outcome for each question/item. We can use this to create another categorical variable:
 
-```{r}
+```{r manipulate-3}
 # Now we determine whether the answer is below or above 50
 items$answer_result <- items$answer <= 50
 
@@ -165,11 +137,10 @@ items$answer_result <- factor(items$answer_result, levels = c(TRUE, FALSE),
                               labels = c("equal to or below 50", "above 50"))
 ```
 
+### Step 4: Make a visualization
 Ok, now we are ready to make a plot. We will plot the item deadline (maximum_response_time_in_seconds) on the x-axis and the item difficulty (rating) on the y-axis. We group the items into a group with answer equal to or below 50 and above 50.
 
-The assignment is for you to reproduce the following visualization (or make it even better):
-
-```{r, echo=FALSE}
+```{r plot, }
 ggplot(data = items,
        aes(x = maximum_response_in_seconds,
            y = rating,
@@ -180,30 +151,11 @@ ggplot(data = items,
        fill = "Item Answer")
 ```
 
-<!-- * 3pts for correct reproduction  -->
+### Step 5: Disconnect from the server
+When you are done working on the server, you need to disconnect from the database. You do this with the following code:
 
-<!-- * 1pt [bonus] for further improvements -->
-
-Grading:
-
--   Does the data show the same pattern? \[1.5 pt\]
--   Is the styling the same? \[1.5 pt\]
--   BONUS: Where there extra features added? \[0.5 pt\]
--   Did the code run? \[0.5 pt\]
--   Were styling issues resolved? (lintr) \[0.5 pt\]
-
-Please note that you will only receive bonus points if your extra features are meaningful and improve the visualization. Simply changing colors or themes will not be rewarded, unless you can motivate why your changes are an improvement.
-
-When you are done, please close the connection to the database:
-
-```{r}
+```{r disconnect}
 oefenwebDatabase::close_connections()
+# Always run this code in the console; do not leave this line in your script!
 ```
 
-### B. Interactive visualizations with Plotly
-
-## Part 2: Group
-
-### A. Choose a research question
-
-### B.
